# controle-financas

./: .gitignore  README.md  db.py  main.py  pdf_export.py  pyproject.toml  requirements.txt  state.py  styles.py
.github/workflows/: build-apk.yml
.opencode/skills/controle-financas/: SKILL.md
.opencode/skills/dba-auditor/: SKILL.md
.opencode/skills/designer-ux-flet/: SKILL.md
.opencode/skills/refatorador-flet/: SKILL.md
components/: __init__.py  common.py  custos_fixos.py  dashboard.py  lancamento.py  lanctos.py  registro_custo.py  renda.py
